--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: home
 
 <h2>{{ site.name }}</h2>
   
-<p>The goal of strategic networking laboratory is to identify, analyze, predict, and manage the strategic behaviors of humans in various of networks such as communication network, information network, social network, etc.</p>
+<p>Our goal is to identify, analyze, predict, and manage the strategic behaviors of humans in various of networks such as communication network, information network, social network, etc.</p>
 <h2>Research directions include:</h2>
   <ul>
     <li>Resource management and network formation in communication networks</li>
