Update member and address

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: home
   <p>
   Email (Lab Director): <a href="mailto:{{ site.email }}">{{ site.email }}</a><br/>
   Phone: +886-2-2787-2300#2339<br/>
-  Address: No. 128, Sec. 2, Academia Road, Nakang, Taipei City, Taiwan
+  Address: No. 128, Academia Road, Section 2, Nangang, Taipei City, Taiwan
   </p>
 
   <p>RA and PostDoc <a href="http://tom.ky/recruit/">hiring</a>!</p>
