add photo (expr)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@ title: home
   <section class="small-12 large-8 columns page-content">
 
 <h2>{{ site.name }}</h2>
-  
+
+![Lab Gathering 2019/01](/images/lab_2018_01.jpeg.jpg)
+
 <p>Our goal is to identify, analyze, predict, and manage the strategic behaviors of humans in various of networks such as communication network, information network, social network, etc.</p>
 <h2>Research directions include:</h2>
   <ul>
@@ -15,7 +17,7 @@ title: home
     <li>Information flow management in information network</li>
     <li>Social learning in social networks</li>
   </ul>
-    
+
   <h2>Contact Info</h2>
   <p>
   Email (Lab Director): <a href="mailto:{{ site.email }}">{{ site.email }}</a><br/>
@@ -26,7 +28,7 @@ title: home
   <p>RA and PostDoc <a href="http://tom.ky/recruit/">hiring</a>!</p>
   <!--Template:  <a href="https://github.com/chrisanthropic/slim-pickins-jekyll-theme">slim pickins</a>
   Host: <a href="http://github.com/">github page</a> -->
-  
+
   </section>
     {% include asides/recent_posts.html %}
 </article>
