--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: home
 
 <h2>{{ site.name }}</h2>
 
-<img src="../images/lab_2018_01.jpeg" alt="Lab Gathering 2019/01" width="80%" style="max-width:1920px;border-radius: 10%;" />
+<img src="../images/lab_2018_01.jpeg" alt="Lab Gathering 2019/01" width="90%" style="max-width:1920px;border-radius: 1%;display:block;margin-left:auto;margin-right:auto;" />
 
 <p>Our goal is to identify, analyze, predict, and manage the strategic behaviors of humans in various of networks such as communication network, information network, social network, etc.</p>
 <h2>Research directions include:</h2>
